--- a/Literature Review.ipynb
+++ b/Literature Review.ipynb
@@ -59,7 +59,7 @@
     "   \n",
     "#### Method:\n",
     "    - L1 regularization method using 27 key terms in contrast to the previous methods based on unemployment and income variables.\n",
-    "    - Used Google Trends Time Series Data for each term for each state\n",
+    "    - Used Google Trends Time Series Data for each term for each state.\n",
     "    - From the initial pool, we discarded 202 multi-word terms, and 121 terms with “too little search volume.”\n",
     "    - Each term was carefully examined to consider possible confounding searches—searches for non-behavioral health terms using the same word—which could muddle the results. For instance, searching for “pot,” a common slang term for marijuana, also produces search volumes for phrases such as “crock pot,” a kitchen appliance.\n",
     "    \n",
@@ -82,6 +82,8 @@
     "    - This study limited Google Trends to the United States, and focuses on the state-level data for comparability to official mortality data. Google's search volume tool starts with data from 2004. We limit the data to the last five years (2010–2014) because internet use has steadily increased over the last 15 years (Perrin and Duggan, 2015)\n",
     "    \n",
     "    - The way they define their equations\n",
+    "    \n",
+    "    - SpatioTemporal Data (why we did not use it)\n",
     "   \n",
     "   \n",
     "#### Something I did not understand:\n",
@@ -94,6 +96,8 @@
     "    - Compare the reliability of Google Trends in Italy in different clinical settings, for both common diseases with lower media coverage, and for less common diseases attracting major media coverage.\n",
     "    \n",
     "#### Method:\n",
+    "\n",
+    "    - Data used for spatio-temporal in a sense that this was focused on a specific province.\n",
     "    - Using the keywords ‘‘renal colic”, ‘‘epistaxis”, and ‘‘mushroom poisoning”, selected on the basis of available and reliable epidemiological data to look for rarely spoken of diseases.\n",
     "    \n",
     "    - Using ‘‘meningitis”, ‘‘Legionella Pneumophila pneumonia”, and ‘‘Ebola fever” for popularly spoken of diseases.\n",
@@ -119,27 +123,147 @@
     "#### Things that could be used (cited, compared) in our paper:\n",
     "    - Epidemiologists now monitor the use of internet search engines to track epidemics, inferring their movements through changes in the search volumes for phrases that are closely linked with a particular pathogen such as “Salmonella”, “diarrhea” and “food poisoning” (Brownstein et al., 2009)\n",
     "   \n",
+    "## 5) NOWCASTING OBESITY IN THE U.S. USING GOOGLE SEARCH VOLUME DATA - (2014)\n",
     "\n",
-    "## 5) Use of Google Insights for Search to Track Seasonal and Geographic Kidney Stone Incidence in the United States - \n",
+    "They use hand- picked single terms and their correlations to predict regional obesity prevalence by modeling regional as well as temporal variation in the Google Trends data. However, their methods use ad hoc feature selection and tend to use a ing approach without proper predictive evaluations. Moreover, their research is only based on obesity in the U.S. and does not provide a framework for other NCDs.\n",
     "\n",
     "\n",
-    "## 6) Assessing the effectiveness of disease awareness programs: Evidence from Google Trends data for the world awareness dates - University of Tehran (2017)\n",
+    "## 6) Search Query Data to Monitor Interest in Behavior Change: Application for Public Health - (2012)\n",
     "\n",
-    "## 7) Un search of computer-aided social support in non-communicable diseases care - University of Vale do Rio dos Sinos (2017)\n",
+    "#### Main Idea: \n",
+    "A short paper that explore patterns of search query activity for the terms ‘weight’, ‘diet’, ‘tness’, and ‘smoking’ to illustrate times and locations of high and low public interest in behaviors related to preventable causes of death. ey use time-series data to train a linear model to monitor public interest in behavior change.\n",
     "\n",
-    "## 8) Digital disease detection: A systematic review of event-based internet biosurveillance systems - Yale University School of Medicine (2017)\n",
+    "## 7) Web search activity data accurately predict population chronic disease risk in the USA. - (2015)\n",
     "\n",
-    "## 9) Evaluating Google Trends as a Tool for Integrating the ‘Smart Health’ Concept in the Smart Cities’ Governance in USA - University of Thrace (2016)\n",
+    " - The most relevant study to us. Uses spatial data to predict temporal patterns without proper normalization and comparison.\n",
+    " - Does not compare to a proper baseline\n",
+    " - Does semantic-link keyword selection\n",
     "\n",
-    "## 10) Fertility and its Meaning: Evidence from Search Behavior - Aalto University (2017)\n",
+    "## 8) Relationship Between State-Level Google Online Search Volume and Cancer Incidence in the United States: Retrospective Study - (2015)\n",
     "\n",
-    "## 11) Rethinking Suicide Surveillance: Google Search Data and Self-Reported Suicidality Differentially Estimate Completed Suicide Risk - Harvard University (2015)\n",
+    "#### Main Idea: \n",
     "\n",
-    "## 12) Use of Google in Study of Noninfectious Medical Conditions - University of California (2010)\n",
+    "Characterize the relationship between cancer incidence and online Google search volumes in the United States for 6 common cancers. A secondary objective was to evaluate the association of search activity with cancer-related public events and celebrity news coverage.\n",
     "\n",
-    "## 13) Google Trends can improve surveillance of Type 2 diabetes - Scientific Report in Nature (2017)\n",
+    "#### Methods:\n",
     "\n",
-    "## 14) Monitoring Pertussis Infections Using Internet Search Queries - Scientific Report in Nature (2017)"
+    "    - Data:\n",
+    "        - CDC State level data.\n",
+    "        - For the primary analysis, each of the 6 cancer search terms was used individually to obtain the annual RSV for each state from 2004 through 2013. \n",
+    "            - For example, if Kentucky were the state that searched for “breast cancer” the most in a given year, it would have a value of 100, while Kansas would have a value of 50 if it searched for “breast cancer” half as often as Kentucky in that year. \n",
+    "        -  Second, all cancer search terms were compared relative to each other for the United States as a whole for the study period, 2004 through 2013, to contextualize national trends for cancer type over time.\n",
+    "        - The secondary objective was to explore the impact of known drivers of Internet activity in our GT data. In this analysis, the RSV trends for each cancer were temporally compared to events previously reported to increase search activity, including cancer awareness months, celebrity events, and heavily covered news stories [19-22]. In this analysis, RSV was determined by setting 100 at the time period with greatest activity for the United States as a whole. Cancer awareness months for each of the 6 cancers of interest are October (breast), September (prostate), November (lung), March (colon), and September (uterine and leukemia). For other noticeable spikes in RSV, Google searches were performed in a 2-step process first using the cancer and date range to identify news stories for that timeframe: “lung cancer March 2010.” If that search was not productive, a second search with the term “celebrity” was added: “lung cancer March 2010 celebrity.”\n",
+    "        \n",
+    "    - Analysis:\n",
+    "        - Primary: Spearman correlation and linear regression with RSV and year as independent variables and cancer incidence as the dependent variable.\n",
+    "        - Secondary:  Temporal associations between search activity and events raising public awareness such as cancer awareness months and cancer-related celebrity news were described.\n",
+    "        \n",
+    "    - More details about analysis:\n",
+    "        - Primary: \n",
+    "            - correlation between rsv and cancer incidence at state level from 2004 to 2013.\n",
+    "            - For each cancer they obtained 510 rsvs (10 per state for each year). Then they used spearman correlation to examine association b/w state level rsv and state level incidence.\n",
+    "\n",
+    "\n",
+    "## 9) Fertility and its Meaning: Evidence from Search Behavior - Aalto University (2017)\n",
+    "\n",
+    "#### Main Idea:\n",
+    "    - To detect evidence for different contexts surrounding different “meanings” of fertility\n",
+    "    -  model regional variation across states for different fertility levels\n",
+    "    - track temporal changes in fertility across time.\n",
+    "    \n",
+    "#### Methods:\n",
+    "    - Collected spatial data and created spatial model to apply to spatial variation\n",
+    "    - Then tried to apply spatial model to temporal variation (global)\n",
+    "    \n",
+    "\n",
+    "## 10) Using Search Engines to Investigate Shared Migraine Experiences\n",
+    "\n",
+    "#### Main Idea: \n",
+    "    - To investigate migraine patterns in the United States using Google search data. \n",
+    "    - Evaluate time-series relationships between migraines and social factors.\n",
+    "    -  Hypothesis: RSV for migraine would be affected by societal aspects such as day of the week, holidays, and novel social events.\n",
+    "    \n",
+    "#### Methods:\n",
+    "    - Temporal data: 12 years of Google Trends data (January 1, 2004 to August 15, 2016) daily.\n",
+    "    \n",
+    "#### Interesting results:\n",
+    "    - The first pattern is that migraine searches in the United States have been increasing in relative popularity (ie, after adjusting for simultaneous increases in search volume) since about 2010. The reason for this increase is unclear, but compared to before 2010, the relative search volume has increased each year. A second pattern is that there is a rhythm to the searches throughout the year. Migraine searches are at their nadir in December and increase remarkably in January through March where they then decrease in relative volume into the summer months. Searches increase again in relative volume near the end of summer and peak again in the fall (Sept.–Nov.). This pattern is remarkably consistent from year-to-year and only varies by degree.\n",
+    "    \n",
+    "#### Take away for us:\n",
+    "    - \"Additionally, Google limits the availability of the methods utilized in the TRENDS algorithm such that we were not able to uncover the methods used to adjust for search volume or even individual items included in the search strategy.\"\n",
+    "    - Our research to the rescue!\n",
+    "    \n",
+    "## 11) Correlation Among Cancer Incidence and Mortality Rates and Internet Searches in the United States -  (2017)\n",
+    "\n",
+    "#### Main Idea:\n",
+    "    - evaluate whether state-specific normalized internet search volume correlates with incidence and mortality rates of common cancers in the United States, including melanoma.\n",
+    "    \n",
+    "#### Method:\n",
+    "    - They chose to evaluate the 10 most incident cancers in the United States, based on the Centers for Disease Control and Prevention’s National Program of Cancer Registries in the time period 2009 to 2013 for all 50 US states and the District of Columbia. \n",
+    "    - They collected Google SVIs by state for each cancer, using exact search terms, in the most common lay terms used for these cancers (eg, lung cancer, breast cancer, or prostate cancer). \n",
+    "    - They downloaded Google SVI data in September 2016. \n",
+    "    - They used the National Program of Cancer Registries age adjusted cancer incidence and mortality rates by state for each cancer for 2009 to 2013.5\n",
+    "\n",
+    "    \n",
+    "## 12) A Google Trends-based approach for monitoring NSSI - (2014)\n",
+    "\n",
+    "#### Main Idea: \n",
+    "    - Create a surviellance system for NSSI\n",
+    "    \n",
+    "    \n",
+    "#### Method:\n",
+    "    - Google Trends was searched for the years 2004 to 2012 (as data before 2004 were not available) for “autolesionismo” (Italian for NSSI). \n",
+    "    - Autocorrelation functions of this series of data, both crude and adjusted partial, were computed using R environment.\n",
+    "    - A list of NSSI-related terms was searched in Italian and their flux volumes were correlated with the NSSI hit-search data. Pearson’s coefficient was calculated with SPSS. P-value was computed with SPSS and values ≤0.05 were considered statistically significant.\n",
+    "\n",
+    "#### Results:\n",
+    "    - The Italian towns with the higher searching fluxes and volumes were Naples, Milan, Padua, Bari, Bologna, Rome, Palermo, Turin, and Florence; that is to say, they did not observe any geographical gradient between North and South.\n",
+    "\n",
+    "\n",
+    "#### Interesting idea(s):\n",
+    "    - The new media can have a dangerous epidemic and “viral” contagious effect on vulnerable subjects, and some scholars talk about a so-called “virtual cutting edge” (the ways adolescents use the Internet for conveying their feelings and NSSI-related experiences), a “Werther effect” (that is to say, the effect of improper and inappropriate media reporting of suicide, especially among celebrities and stars, on the lay population), or a “cyber-suicide phenomenon” (that is to say, a suicide attempt first announced on Internet websites, such as forums, blogs, or chats, which is later followed by the fatality). NSSI 2.0, being interactive, dynamic, and increasingly expanding, is a complex reality where websites could have a negative effect of reinforcement, or, on the contrary, could be used for healthier purposes, such as health education and self-managing and coping strategy. Therefore, monitoring the hit searches could act as an efficient real time surveillance system.\n",
+    "\n",
+    "## 13) Low validity of Google Trends for behavioral forecasting of national suicide rates - (2017)\n",
+    "\n",
+    "#### Main idea:\n",
+    "    -  This study evaluated the validity and utility of Google Trends search volumes for behavioral forecasting of suicide rates in the USA, Germany, Austria, and Switzerland\n",
+    "\n",
+    "#### Goals:\n",
+    "    - Systematically collect relevant search terms in the field of suicide research, both with regards to pro-suicide terms and suicide prevention terms, and to evaluate respective Google Trends search volumes for availability and suitability for time-series analysis.\n",
+    "    - Conduct rigorous analyses on the temporal associations of search volumes and suicide rates, utilizing Box-Jenkins methods of time-series analysis, transfer function models and prewhitening\n",
+    "    - Compare results for different countries, namely the USA, Germany, Austria, and Switzerland, in order to gain an impression of the generality of findings and their reproducibility across different countries, and to obtain first results for German-speaking countries for which evidence is currently lacking. \n",
+    "    \n",
+    "\n",
+    "#### Flaws with previous studies:\n",
+    "    - First, studies selected search terms mostly in an ad hoc fashion and did not systematically evaluate for which terms Google Trends actually provides analyzable data.\n",
+    "    - Second, assessing the temporal associations between two time series may result in spurious findings when the analysis does not adequately account for structural similarities (e.g., autocorrelational pattern, temporal trends) in the explanatory time series (i.e., Google Trends search volumes) and the dependent time series (i.e., suicide rates) - This I do not understand.\n",
+    "    \n",
+    "#### Keyword Selection:\n",
+    "    - Search terms consisting of more than one word were searched both with and without quotation marks. Search terms consisting of more than one word were also entered in different spellings and in different word orders to cover a broad spectrum of possibilities. Additional terms suggested by Google’s autocomplete function in these searches were amended to the list of search terms. In a last step, we excluded search terms that pertained to movie titles, band or song titles, terms that are used in a lyrical or humorous context, scientific terms, and opaque or rare phrases.\n",
+    "    \n",
+    "#### Observations:\n",
+    "    - Good literature review - Need to be viewed in detail"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 10) Evaluating Google Trends as a Tool for Integrating the ‘Smart Health’ Concept in the Smart Cities’ Governance in USA - University of Thrace (2016)\n",
+    "\n",
+    "## 11) Assessing the effectiveness of disease awareness programs: Evidence from Google Trends data for the world awareness dates - University of Tehran (2017)\n",
+    "\n",
+    "## 12) In search of computer-aided social support in non-communicable diseases care - University of Vale do Rio dos Sinos (2017)\n",
+    "\n",
+    "\n",
+    "## 13) Rethinking Suicide Surveillance: Google Search Data and Self-Reported Suicidality Differentially Estimate Completed Suicide Risk - Harvard University (2015)\n",
+    "\n",
+    "## 14) Use of Google in Study of Noninfectious Medical Conditions - University of California (2010)\n",
+    "\n",
+    "\n",
+    "## 15) Google Trends can improve surveillance of Type 2 diabetes - Scientific Report in Nature (2017)\n"
    ]
   },
   {
