--- a/Literature Review.ipynb
+++ b/Literature Review.ipynb
@@ -251,19 +251,48 @@
     "collapsed": true
    },
    "source": [
-    "## 10) Evaluating Google Trends as a Tool for Integrating the ‘Smart Health’ Concept in the Smart Cities’ Governance in USA - University of Thrace (2016)\n",
+    "## 14) Evaluating Google Trends as a Tool for Integrating the ‘Smart Health’ Concept in the Smart Cities’ Governance in USA - University of Thrace (2016)\n",
     "\n",
-    "## 11) Assessing the effectiveness of disease awareness programs: Evidence from Google Trends data for the world awareness dates - University of Tehran (2017)\n",
+    "## 15) Assessing the effectiveness of disease awareness programs: Evidence from Google Trends data for the world awareness dates - University of Tehran (2017)\n",
     "\n",
-    "## 12) In search of computer-aided social support in non-communicable diseases care - University of Vale do Rio dos Sinos (2017)\n",
-    "\n",
-    "\n",
-    "## 13) Rethinking Suicide Surveillance: Google Search Data and Self-Reported Suicidality Differentially Estimate Completed Suicide Risk - Harvard University (2015)\n",
-    "\n",
-    "## 14) Use of Google in Study of Noninfectious Medical Conditions - University of California (2010)\n",
+    "## 16) In search of computer-aided social support in non-communicable diseases care - University of Vale do Rio dos Sinos (2017)\n",
     "\n",
     "\n",
-    "## 15) Google Trends can improve surveillance of Type 2 diabetes - Scientific Report in Nature (2017)\n"
+    "## 17) Rethinking Suicide Surveillance: Google Search Data and Self-Reported Suicidality Differentially Estimate Completed Suicide Risk - Harvard University (2015)\n",
+    "\n",
+    "## 18) Use of Google in Study of Noninfectious Medical Conditions - University of California (2010)\n",
+    "\n",
+    "\n",
+    "## 19) Google Trends can improve surveillance of Type 2 diabetes - Scientific Report in Nature (2017)\n",
+    "\n",
+    "## 20) AB1148 Infodemiology and seasonality of systemic lupus erythematous using google trends\n",
+    "\n",
+    "## 21) PTU-064 Online searches for information about alcohol in the uk and worldwide: an exploratory time series analysis using google trends\n",
+    "\n",
+    "## 22) Global impact of the World Hepatitis Day 2016: An evaluation using Google Trends\n",
+    "\n",
+    "## 23) Using Search Engine Query Data to Explore the Epidemiology of Common Gastrointestinal Symptoms\n",
+    "\n",
+    "## 24) Google Trends as a method for prediction of suicide rates\n",
+    "\n",
+    "## 25) Forecasting the Incidence of Dementia and Dementia-Related Outpatient Visits With Google Trends: Evidence From Taiwan\n",
+    "\n",
+    "\n",
+    "## 26) The prevalence and trends of overweight, obesity and nutrition-related non-communicable diseases in the Arabian Gulf States\n",
+    "\n",
+    "## 27) Gluttony and guilt: monthly trends in internet search query data are comparable with national-level energy intake and dieting behavior\n",
+    "\n",
+    "## 28) Google and suicides: what can we learn about the use of internet to prevent suicides?\n",
+    "\n",
+    "## 29) Population level evidence for seasonality of the human microbiome\n",
+    "\n",
+    "## 30) An infodemiology study on breast cancer in Iran: Health information supply versus health information demand in PubMed and Google Trends\n",
+    "\n",
+    "## 31) AB1110 What can google trends can tell us about a disease? big data trends analysis in systemic lupus erythematosus\n",
+    "\n",
+    "## 32) Correlation Among Cancer Incidence and Mortality Rates and Internet Searches in the United States\n",
+    "\n",
+    "## 33) Suicide rates and information seeking via search engines: A cross-national correlational approach"
    ]
   },
   {
