Lit Review Done

--- a/Literature Review.ipynb
+++ b/Literature Review.ipynb
@@ -251,48 +251,316 @@
     "collapsed": true
    },
    "source": [
-    "## 14) Evaluating Google Trends as a Tool for Integrating the ‘Smart Health’ Concept in the Smart Cities’ Governance in USA - University of Thrace (2016)\n",
+    " ## 14) Rethinking Suicide Surveillance: Google Search Data and Self-Reported Suicidality Differentially Estimate Completed Suicide Risk - Harvard University (2015)\n",
     "\n",
-    "## 15) Assessing the effectiveness of disease awareness programs: Evidence from Google Trends data for the world awareness dates - University of Tehran (2017)\n",
+    "Main Idea: This study basically extended the previous method mentioned in (Using google searches on the internet to monitor suicidal behavior) but for two years i.e. 2008 and 2009 to test Google trends as a tool to predict suicide. They also looked at how google trends compared with self-reported estimates against completed suicide rates and found that google trends gave better estimates. In terms of analysis, they also looked at how the discrepancies in the estimates correlated to the percentages of racial minorities, and socio-economic statuses in different states.\n",
     "\n",
-    "## 16) In search of computer-aided social support in non-communicable diseases care - University of Vale do Rio dos Sinos (2017)\n",
-    "\n",
-    "\n",
-    "## 17) Rethinking Suicide Surveillance: Google Search Data and Self-Reported Suicidality Differentially Estimate Completed Suicide Risk - Harvard University (2015)\n",
-    "\n",
-    "## 18) Use of Google in Study of Noninfectious Medical Conditions - University of California (2010)\n",
-    "\n",
-    "\n",
-    "## 19) Google Trends can improve surveillance of Type 2 diabetes - Scientific Report in Nature (2017)\n",
-    "\n",
-    "## 20) AB1148 Infodemiology and seasonality of systemic lupus erythematous using google trends\n",
-    "\n",
-    "## 21) PTU-064 Online searches for information about alcohol in the uk and worldwide: an exploratory time series analysis using google trends\n",
-    "\n",
-    "## 22) Global impact of the World Hepatitis Day 2016: An evaluation using Google Trends\n",
-    "\n",
-    "## 23) Using Search Engine Query Data to Explore the Epidemiology of Common Gastrointestinal Symptoms\n",
-    "\n",
-    "## 24) Google Trends as a method for prediction of suicide rates\n",
-    "\n",
-    "## 25) Forecasting the Incidence of Dementia and Dementia-Related Outpatient Visits With Google Trends: Evidence From Taiwan\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: Spatial\n",
+    "- Data de-normalization: No\n",
+    "- Evaluation: In-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting:United States\n",
+    "- Generalizability to other countires: No\n",
     "\n",
     "\n",
-    "## 26) The prevalence and trends of overweight, obesity and nutrition-related non-communicable diseases in the Arabian Gulf States\n",
+    "## 15) Use of Google in Study of Noninfectious Medical Conditions - University of California (2010)\n",
     "\n",
-    "## 27) Gluttony and guilt: monthly trends in internet search query data are comparable with national-level energy intake and dieting behavior\n",
+    "Queried Google Insights for Search with the following terms: “diabetes,” “high blood pressure + hypertension,” “low blood pressure + hypotension,” “heart attack + myocardial infarction,” and “kidney stones.” A new query was generated for each set of terms, and restricted to searches done in the United States from February 2005 to January 2010. This produced 261 weeks of normalized search volume, which we divided into monthly intervals.\n",
     "\n",
-    "## 28) Google and suicides: what can we learn about the use of internet to prevent suicides?\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: Temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: United States\n",
+    "- Generalizability to other countires: No\n",
     "\n",
-    "## 29) Population level evidence for seasonality of the human microbiome\n",
+    "## 16) Using Search Engine Query Data to Explore the Epidemiology of Common Gastrointestinal Symptoms\n",
     "\n",
-    "## 30) An infodemiology study on breast cancer in Iran: Health information supply versus health information demand in PubMed and Google Trends\n",
+    "Main  idea: The aim of this study was to compare the trends in ISV with clinical datasets for common gastrointestinal symptoms such as vomiting, diarrhea, etc. The location was US and time period was 2008-2011. This was a temporal analysis with an in-sample evaluation using wilcoxin measure.\n",
     "\n",
-    "## 31) AB1110 What can google trends can tell us about a disease? big data trends analysis in systemic lupus erythematosus\n",
+    "- Bootstrapping Keyword selection: NO\n",
+    "- GT data type: Temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: In-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: US\n",
+    "- Generalizability to other countires: No \n",
     "\n",
-    "## 32) Correlation Among Cancer Incidence and Mortality Rates and Internet Searches in the United States\n",
     "\n",
-    "## 33) Suicide rates and information seeking via search engines: A cross-national correlational approach"
+    "## 17) Forecasting the Incidence of Dementia and Dementia-Related Outpatient Visits With Google Trends: Evidence From Taiwan\n",
+    "\n",
+    "Main idea: Dementia related searches correlated with outpatient visits in Taiwan ??\n",
+    "They collected data from 2009-2011.\n",
+    "\n",
+    "- Bootstrapping Keyword selection: Yes\n",
+    "- GT data type: Temporal\n",
+    "- Data de-normalization:  NA\n",
+    "- Evaluation: In-sample (correlational)\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: Taiwan\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 18) Gluttony and guilt: monthly trends in internet search query data are comparable with national-level energy intake and dieting behavior\n",
+    "\n",
+    "Main Idea: Look at the diet related keywords and track temporal trends across Australia from 2004-2016\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type:  Temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: In-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: Australia\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "############################\n",
+    "\n",
+    "This is where to start from!\n",
+    "\n",
+    "## 19) Google and suicides: what can we learn about the use of internet to prevent suicides?\n",
+    "\n",
+    "Main Idea: They use data from 2006 to 2014 to create a regression model to predict the monthly suicide rate with google trends data.\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: Spatial\n",
+    "- Data de-normalization: No\n",
+    "- Evaluation: In-sample (regression)\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: US\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 20) Correlation Among Cancer Incidence and Mortality Rates and Internet Searches in the United States\n",
+    "\n",
+    "Main idea: Look at thecorrelation between 10 cancer types in the U.S. and check their correlation with Mortality rates per state. \n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: Spatial\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: In-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: US\n",
+    "- Generalizability to other countires: NO\n",
+    "\n",
+    "## 21) Suicide rates and information seeking via search engines: A cross-national correlational approach\n",
+    "\n",
+    "The main idea was to generalize the suicide related correlational study b/w google trends and actual suicide rates. \n",
+    "Very basic and naive analysis done in the paper.\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: Spatial\n",
+    "- Data de-normalization: No\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: Intl.\n",
+    "- Generalizability to other countires: Yes\n",
+    "\n",
+    "## 22) Using google searches on the internet to monitor suicidal behavior\n",
+    "\n",
+    "Main idea: This study was inspired by a previous study in Japan and Taiwan where they found positive correlation between search behavior of suicide-related terms and actual prevalence. This study replicated the correlational study using 3-4 keywords for the year 2009 in the US and found strong correlation.\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: spatial\n",
+    "- Data de-normalization: No\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: United States\n",
+    "- Generalizability to other countires: No (NA -since inspired from international setting)\n",
+    "\n",
+    "# From here all is from Survey paper\n",
+    "\n",
+    "## 23) Do Seasons Have an Influence on the Incidence of Depression? The Use of an Internet Search Engine Query Data as a Proxy of Human Affect\n",
+    "\n",
+    "mental health related research\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl\n",
+    "- Generalizability to other countires: Yes\n",
+    "\n",
+    "## 24) A Time-Series Analysis of Google Searches for Suicide and the Risk of Completed Suicide in England and Wales, 2004–2010\n",
+    "\n",
+    "\n",
+    "mental health related research\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 25) Does the volume of Internet searches using suicide‐related search terms influence the suicide death rate: Data from 2004 to 2009 in Japan\n",
+    "\n",
+    "mental health related research\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "\n",
+    "## 26) Seasonality in Seeking Mental Health Information on Google\n",
+    "\n",
+    "-mental health related research. All Google mental health queries were monitored in the U.S. and Australia from 2006 to 2010. Additionally, queries were subdivided among those including the terms ADHD (attention\n",
+    "defıcit-hyperactivity disorder); anxiety; bipolar; depression; anorexia or bulimia (eating disorders);\n",
+    "OCD (obsessive-compulsive disorder); schizophrenia; and suicide. \n",
+    "\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Us, Intl.\n",
+    "- Generalizability to other countires: Yes\n",
+    "\n",
+    "## 27) Frequency and seasonal variation of ophthalmology-related internet searches.\n",
+    "\n",
+    "Google trend data for ophthalmology terms for the United States, the United Kingdom, Canada, and\n",
+    "Australia from 2004 through 2008 were studied. Mean population-weighted temperature and fraction of schools\n",
+    "in session were estimated from databases, and relative potential sunlight intensity was calculated. Multivariable linear regression was used to predict search term frequency based on environmental variables.\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Us, Intl.\n",
+    "- Generalizability to other countires: Yes\n",
+    "\n",
+    "\n",
+    "## 28) Seasonal trends in restless legs symptomatology: evidence from Internet search query data\n",
+    "\n",
+    "Internet search query data were obtained from Google Trends. Monthly normalized search volume was determined for the term restless legs between January 2004 and December 2012. \n",
+    "\n",
+    "Using cosinor analysis, seasonal effects were tested for data from the United States, Australia, Germany, the United Kingdom, and Canada.\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Us, Intl.\n",
+    "- Generalizability to other countires: Yes\n",
+    "\n",
+    "## 29) Why do people Google epilepsy?: An infodemiological study of online behavior for epilepsy-related search terms\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Worldwide\n",
+    "- Generalizability to other countires: NA\n",
+    "\n",
+    "## 30) Infodemiology and Infoveillance of Multiple Sclerosis in Italy\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl.\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 31) Medical nowcasting using Google trends: application in otolaryngology\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl. (Germany)\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 32) Determination of geographic variance in stroke prevalence using Internet search engine analytics\n",
+    "\n",
+    "** Maybe check with Ingmar on whether they needed normalization or not ** I think they do or at least they need to rescale their dependent variable?\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: spatial\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: US\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 33) Internet Search Trends Analysis Tools Can Provide Real-time Data on Kidney Stone Disease in the United States\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: spatial\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: US\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 34) Internet suicide searches and the incidence of suicide in young people in Japan\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl. (Japan)\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 35) Psychological and Social Factors Affecting Internet Searches on Suicide in Korea: A Big Data Analysis of Google Search Trends\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: NA\n",
+    "- Geographic setting: Intl. (Korea)\n",
+    "- Generalizability to other countires: No\n",
+    "\n",
+    "## 36) Association of Internet search trends with suicide death in Taipei City, Taiwan, 2004–2009\n",
+    "\n",
+    "- Bootstrapping Keyword selection: No\n",
+    "- GT data type: temporal\n",
+    "- Data de-normalization: NA\n",
+    "- Evaluation: in-sample\n",
+    "- Comparison to trivial baseline: No\n",
+    "- Geographic setting: Intl. (Taiwan)\n",
+    "- Generalizability to other countires: No\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## **) Assessing the effectiveness of disease awareness programs: Evidence from Google Trends data for the world awareness dates - University of Tehran (2017)\n",
+    "\n",
+    "- Left for discussion\n",
+    "\n",
+    "## **) Global impact of the World Hepatitis Day 2016: An evaluation using Google Trends\n",
+    "\n",
+    "- Left for discussion\n",
+    "\n",
+    "## **) A Novel Evaluation of World No Tobacco Day in Latin America\n",
+    "\n",
+    "- Left for discussion\n",
+    "\n",
+    "## **) The effect of breast cancer awareness month on internet search activity--a comparison with awareness campaigns for lung and prostate cancer.\n",
+    "\n",
+    "- Left for discussion\n",
+    "\n",
+    "## **) Disease Monitoring and Health Campaign Evaluation Using Google Search Activities for HIV and AIDS, Stroke, Colorectal Cancer, and Marijuana Use in Canada: A Retrospective Observational Study.\n",
+    "\n",
+    "## **) Leveraging Big Data to Improve Health Awareness Campaigns: A Novel Evaluation of the Great American Smokeout.\n",
+    "\n",
+    "## **) Detecting internet activity for erectile dysfunction using search engine query data in the Republic of Ireland.\n"
    ]
   },
   {
